# unduwave

./: .gitmodules  MANIFEST.in  README.md  pyproject.toml  requirements.txt  resres_summary.txt  run.sh  setup.py  setup_tmp.py  unduwave.sublime-workspace
.github/workflow/: MakeUnduwave.yml  install.yml
.github/workflows/: install.yml
External-Software/: where_is_cygwin_installation.txt
build_scripts/: Dockerfile_WAVE  build_wave_undumag.sh  build_wave_undumag_apptainer.sh  compile_undumag_incl_win.sh
docs/source/: conf.py  index.rst  installation.rst  introduction.rst  quickguide.rst  quickguide_undumag.rst  unduwave.analytical_module.ana_undu.rst  usage.rst
scripts/: example_wave.py  example_wave_install.py
scripts/Analytical_Examples/Analytical_EB_Fields/: Analytical_EB_Fields.py
scripts/Bessy_III_Undus/CPMU-20/: cpmu_20.py
scripts/Bessy_III_Undus/CPMU-21/: CPMU_21.py  wave.in
scripts/Bessy_III_Undus/UE24/: ue24.py  wave.in
scripts/Bessy_III_Undus/UE38/: ue38.py  wave.in
scripts/Bessy_III_Undus/UE42.5/: UE42.5.py  wave.in
scripts/Bessy_III_Undus/UE56/: UE56.py  wave.in
scripts/Bessy_III_Undus/UE80/: UE80.py
scripts/Eliptical_Undu/: elliptical_example.py
scripts/First-Examples/: example_wave.py  example_wave_install.py
scripts/Spec_From_BField/spec_from_by/: spec_from_by.py
scripts/Spec_From_BField_Map/: spec_from_bmap.py
scripts/Undumag/: example_undu.py
scripts/UndumagCreateCoil/: UndumagCreateCoil.py
scripts/UndumagCreateMagnet/: UndumagCreateMagnet.py
scripts/UndumagForceCalc/: UndumagForceCalc.py
scripts/UndumagLoadclcFileExample/: UndumagLoadclcFileExample.py  undumag_example.clc
scripts/res/WAVE_DATA/: res_summary.txt  (+2 more)
unduwave/: __init__.py  by.txt  bz.txt  constants.py  int2By.txt  int2Bz.txt  intBy.txt  intBz.txt  profileBy.txt  profileBz.txt  unduwave_incl.py
unduwave.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
unduwave/.archive/: undu_representation.py
unduwave/analytical_module/: analytic_structures.py
unduwave/api/: api_root.py  undu_api_root.py  wave_api_root.py
unduwave/attribute_classes/: attributes.py
unduwave/helpers/: bfield_helpers.py  file_folder_helpers.py  numerical_helpers.py
unduwave/quantities/: quantities.py
unduwave/undu_list/: undu_list_loading.py
unduwave/undu_modules/: undu_blocks.py  undu_coils.py  undu_control.py  undu_magneticObjectGeometries.py  undu_magnets.py  undu_magnets_old.py  undu_parameters.py  undu_postprocess.py  undu_prepare.py  undu_representation.py  undu_results.py  undu_undulatorComponents.py
unduwave/undulatorsBessyII/: undulatoren_bessy_II.json
unduwave/wave/: wave_parameters.py  wave_postprocess.py  wave_prepare.py  wave_results.py
unduwave/wave_modules/: .fuse_hidden0000077700000003  .fuse_hidden000009b20000000a  wave_control.py  wave_parameters.py  wave_postprocess.py  wave_prepare.py  wave_results.py
unit_tests/: test_unduwave_base.py
unit_tests/bfield_testing/: spec_from_by.py
unit_tests/geomatUndulatorRepresentation/: undulator_testing.py
unit_tests/structure_testing/: test_struct.py
(+424 files in other folders)
